--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="shortcut icon" type="ico" href="/favicon.ico">
+    <link rel="icon" sizes="16x16" href="/favicon.ico">
     <title>
       AppyOne - Toutes les Apps Android et IOS de AppyOne
     </title>
