--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>
       AppyOne - Toutes les Apps Android et IOS de AppyOne
     </title>
@@ -10,7 +10,7 @@
       Toutes les Apps Android et IOS de AppyOne !
     </h1>
     <h2>
-        a
+
     </h2>
   </body>
 </html>
