--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>
       AppyOne - Toutes les Apps Android et IOS de AppyOne
