:speech_balloon: text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>
       AppyOne - Toutes les Apps Android et IOS de AppyOne
@@ -11,7 +11,7 @@
       Toutes les Apps Android et IOS de AppyOne !
     </h1>
     <h2>
-
+      - Apps Android également disponibles sur Play Store -
     </h2>
   </body>
 </html>
