--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </title>
   </head>
   <body>
+    <div class = "Android" > Android </div>
+
+    </div>)
     <h1>
       Toutes les Apps Android et IOS de AppyOne !
     </h1>
