:green_apple: ios&android

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <h2>
       - Apps Android également disponibles sur Play Store -
     </h2>
-    <div class = "Android" > Android </div>
-    <div class = "IOS" > IOS </div>
+    <div class = "Android" > Android </div>     <div class = "IOS" > IOS </div>
   </body>
 </html>
