:zap: Android AppTalk APK Download

--- a/index.html
+++ b/index.html
@@ -1,339 +1,32 @@
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>
+      AppyOne - Toutes les Apps Android et IOS de AppyOne
+    </title>
+  </head>
+  <body>
+    <h1>
+      Toutes les Apps Android et IOS de AppyOne !
+    </h1>
+    <h2>
+      - Apps Android également disponibles sur Play Store -
+    </h2>
+    <div class = "Android" > Android </div>     <div class = "IOS" > IOS </div>
+    <br><br><br><br><br><br>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <div class = "AppTalk_A" >
+      <img src = IconAppTalkTransparent.png> AppTalk Android
+      <form action="AppTalk.apk" download>
+        <input type="submit" value="Télécharger AppTalk pour Android" />
+      </form>
+    </div>
 
-<meta charset="utf-8">
-<title>Thinking Blocks | Model and Solve Math Word Problems</title>
-<meta name="keywords" content="math, problem solving, math practice, elementary math, fractions, money, algebra, geometry, multiplication, math manipulatives, word problems, ratios, subtraction, addition, division, one step, two step, thinking blocks">
-<meta name="description" content="Model your word problems with Thinking Blocks! Only at MathPlayground.com.">
-
-<script type="text/javascript">
-	var tyche = { mode: 'tyche', config: 'https://config.playwire.com/1015837/v2/websites/62236/banner.json' }
-</script>
-<script id="tyche" src="//cdn.intergi.com/hera/tyche.js" type="text/javascript"></script>
-
-<script type="text/javascript">
-			(function (a, b) {
-			    if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|silk|lge|maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino|android|ipad|playbook|silk/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4)))window.location = b
-			})(navigator.userAgent || navigator.vendor || window.opera, 'mobile_thinking_blocks.html');
-		</script>
-
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<link rel="stylesheet" href="css/main.css">
-
-<link rel="icon" type="image/png" href="favicon.ico">
-<style>
-        .col-index-game{
-            height: auto;
-            float: left;
-        }
-        .col-home{
-            height: auto;
-        }
-    </style>
-</head>
-<body>
-
-<div id="header_container2">
-<div align="center" style="padding-bottom:0px">
-<a href="index.html"><img class="img-fluid" src="css_images/mpheaderblue.png" alt="Math Playground" title=""></a>
-</div>
-<div align="center" style="padding-bottom:15px; padding-top:15px">
-
-<div data-pw-desk="leaderboard_atf"></div>
-
-<div data-pw-mobi="leaderboard_atf"></div>
-</div>
-</div>
-<div id="header_nav" class="container">
-<a href="/games.html"><img src="/buttons/button_math.png" alt="math games"></a>
-<a href="/logicgames.html"><img src="/buttons/button_logic.png" alt="logic games"></a>
-<a href="/ASB_Index.html"><img src="/buttons/button_arcade.png" alt="math arcade"></a>
-<a href="/wordproblems.html"><img src="/buttons/button_story.png" alt="math word problems"></a>
-<a href="/mathvideos.html"><img src="/buttons/button_videos.png" alt="math videos"></a>
-<a href="/game_directory.html"><img src="/buttons/button_all_games.jpg" alt="all games"></a>
-</div>
-<div class="container"> <header class="grade-navigation">
-<div class="col-grade-game">
-<a href="/grade_1_games.html"><img class="img-game-index" src="/css_images/btn_grade_1.png" alt="grade 1 math games"></a>
-<h6>Grade 1</h6>
-</div>
-<div class="col-grade-game">
-<a href="/grade_2_games.html"><img class="img-game-index" src="/css_images/btn_grade_2.png" alt="grade 2 math games"></a>
-<h6>Grade 2</h6>
-</div>
-<div class="col-grade-game">
-<a href="grade_3_games.html"><img class="img-game-index" src="/css_images/btn_grade_3.png" alt="grade 3 math games"></a>
-<h6>Grade 3</h6>
-</div>
-<div class="col-grade-game">
-<a href="/grade_4_games.html"><img class="img-game-index" src="/css_images/btn_grade_4.png" alt="grade 4 math games"></a>
-<h6>Grade 4</h6>
-</div>
-<div class="col-grade-game">
-<a href="/grade_5_games.html"><img class="img-game-index" src="/css_images/btn_grade_5.png" alt="grade 5 math games"></a>
-<h6>Grade 5</h6>
-</div>
-<div class="col-grade-game">
-<a href="/grade_6_games.html"><img class="img-game-index" src="/css_images/btn_grade_6.png" alt="grade 6 math games"></a>
-<h6>Grade 6</h6>
-</div>
-<div class="col-teachers-callout">
-<a href="/teachers.html"><img src="/css_images/teachers_click_here_310x80.jpg" alt="teachers area"></a>
-<h6>Math Playground for Teachers</h6>
-</div>
-</header>
-<div class="centerImageTextHP">
-Introducing New and Improved Thinking Blocks®
-</div>
-<div class="one column">
-We redesigned Thinking Blocks and packed it full of new features!
-<br>
-<b>read aloud word problems</b> - <b>visual prompts</b> - <b>better models</b> - <b>engaging themes</b> - <b> mobile friendly</b>
-<br>
-Thinking Blocks works well on all devices. The iPad apps have been discontinued for now.
-<br>
-<br>
-</div>
-<div class="col-home-add-right" align="center">
-
-<div data-pw-desk="med_rect_atf"></div>
-
-<div data-pw-mobi="med_rect_atf"></div>
-</div>
-<div class="col-home" style="float: left">
-<a href="tb_addition_jr/index.html">
-<img class="value-img" src="game_images/thinking_blocks_01.png">
-</a>
-<h6>Thinking Blocks Junior</h6>
-</div>
-<div class="col-home">
-<a href="tb_addition/index.html">
-<img src="game_images/thinking_blocks_02.png">
-</a>
-<h6>Thinking Blocks Addition</h6>
-</div>
-<div class="col-home" style="float: left">
-<a href="tb_multiplication/index.html">
-<img class="value-img" src="game_images/thinking_blocks_03.png">
-</a>
-<h6>Thinking Blocks Multiplication</h6>
-</div>
-<div class="col-home">
-<a href="tb_fractions/index.html">
-<img src="game_images/thinking_blocks_04.png">
-</a>
-<h6>Thinking Blocks Fractions</h6>
-</div>
-<div class="col-home" style="float: left">
-<a href="tb_ratios/index.html">
-<img src="game_images/thinking_blocks_05.png">
-</a>
-<h6>Thinking Blocks Ratios</h6>
-</div>
-<div class="col-home" style="float: left">
-<a href="ThinkingBlocks/modeling_tool.html">
-<img class="value-img" src="thinking_blocks_new/modeling_tool.png">
-</a>
-<h6>Thinking Blocks Tool</h6>
-</div>
-<div class="centerImageTextHP">
-Addition and Subtraction
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_addition_subtraction_1.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/AS_PartWhole_2Parts_image.jpg"></a>
-<h6>Part-Whole A</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_addition_subtraction_2.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/AS_PartWhole_3Parts_image.jpg"></a>
-<h6>Part-Whole B</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_addition_subtraction_3.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/AS_Change_2Steps_image.jpg"></a>
-<h6>Two Steps</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_addition_subtraction_4.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/AS_Compare_1_image.jpg"></a>
-<h6>Compare A</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_addition_subtraction_5.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/AS_Compare_2_image.jpg"></a>
-<h6>Compare B</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_addition_subtraction_6.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/AS_Compare_3_image.jpg"></a>
-<h6>Compare C</h6>
-</div>
-<div class="centerImageTextHP">
-Multiplication and Division
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_multiply_divide_1.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/MD_Multiplication_image.jpg"></a>
-<h6>Multiply</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_multiply_divide_2.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/MD_Division_image.jpg"></a>
-<h6>Divide</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_multiply_divide_3.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/MD_MultipleOperations_image.jpg"></a>
-<h6>Mixed Operations</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_multiply_divide_4.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/MD_Compare_1_image.jpg"></a>
-<h6>Compare A</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_multiply_divide_5.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/MD_Compare_2_image.jpg"></a>
-<h6>Compare B</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_multiply_divide_6.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/MD_CriticalThinking_image.jpg"></a>
-<h6>Critical Thinking</h6>
-</div>
-<div class="centerImageTextHP">
-Fractions
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_fractions_1.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Fraction_SetA_image.jpg"></a>
-<h6>Fraction of a Set A</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_fractions_2.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Fraction_SetB_image.jpg"></a>
-<h6>Fraction of a Set B</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_fractions_3.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Fraction_SetC_image.jpg"></a>
-<h6>Fraction of a Set C</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_fractions_4.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Fraction_AS_A_image.jpg"></a>
-<h6>Add and Subtract A</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_fractions_5.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Fraction_AS_B_image.jpg"></a>
-<h6>Add and Subtract B</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_fractions_6.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Fraction_MD_image.jpg"></a>
-<h6>Multiply and Divide</h6>
-</div>
-<div class="centerImageTextHP">
-Decimals and Percent
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_decimals_percent_1.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/DP_1_image.jpg"></a>
-<h6>Decimals A</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_decimals_percent_2.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/DP_2_image.jpg"></a>
-<h6>Decimals B</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_decimals_percent_3.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/DP_3_image.jpg"></a>
-<h6>% of a Number</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_decimals_percent_4.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/DP_4_image.jpg"></a>
-<h6>Taxes, Tips, Sales</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_decimals_percent_5.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/DP_5_image.jpg"></a>
-<h6>% Challenge A</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_decimals_percent_6.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/DP_6_image.jpg"></a>
-<h6>% Challenge B</h6>
-</div>
-<div class="centerImageTextHP">
-Ratios
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_ratios_1.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Ratios_Compare_1_image.jpg"></a>
-<h6>Compare A</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_ratios_2.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Ratios_Compare_2_image.jpg"></a>
-<h6>Compare B</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_ratios_3.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Ratios_Compare_3_image.jpg"></a>
-<h6>Compare C</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_ratios_4.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Ratios_Part_Whole_image.jpg"></a>
-<h6>Part-Total</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_ratios_5.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Ratios_Three_Quantities_image.jpg"></a>
-<h6>Three Quantities</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_ratios_6.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/Ratio_Challenge_image.jpg"></a>
-<h6>Critical Thinking</h6>
-</div>
-<div class="centerImageTextHP">
-Algebra
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_algebra_1.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/ALG_1_image.jpg"></a>
-<h6>Problem 1</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_algebra_2.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/ALG_2_image.jpg"></a>
-<h6>Problem 2</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_algebra_3.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/ALG_3_image.jpg"></a>
-<h6>Problem 3</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_algebra_4.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/ALG_4_image.jpg"></a>
-<h6>Problem 4</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_algebra_5.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/ALG_5_image.jpg"></a>
-<h6>Problem 5</h6>
-</div>
-<div class="col-index-game">
-<a href="ThinkingBlocks/thinking_blocks_algebra_6.html"><img class="img-tbmovie" src="TB_Tool_Videos/images/ALG_6_image.jpg"></a>
-<h6>Problem 6</h6>
-</div>
-<div class="centerImageTextHP"></div>
-<div class="col-md-2"></div>
-<div class="col-xs-12 col-md-8 row-centered">
-<div class=" col-xs-3  col-centered">
-<a href="privacy.html">
-<img class="centerImage5A" src="buttons/button_privacy_dark.png">
-</a>
-</div>
-<div class="col-xs-6  col-centered">
-<img class="centerImage5B" src="IconAppTalkTransparent">
-</a>
-</div>
-<div class="col-xs-3  col-centered">
-<a href="about.html">
-<img class="centerImage5A" src="buttons/button_about.png">
-</a>
-</div>
-</div>
-<div class="col-xs-12" style="padding-top:20px">
-<h6>Copyright © 2017 Math Playground LLC • All Rights Reserved</h6>
-</div>
-</div>
-
-
-<script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-    var pageTracker = _gat._getTracker("UA-5471761-1");
-    pageTracker._trackPageview();
-</script>
-</body>
+     <div class = "AppTalk_I" > <img src = IconAppTalkTransparent.png> AppTalk IOS
+       <form action="AppTalk.apk" download>
+         <input type="submit" value="Télécharger AppTalk pour IOS" />
+       </form>
+     </div>
+  </body>
 </html>
