--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       AppyOne - Toutes les Apps Android et IOS de AppyOne
     </title>
   </head>
-  <body>
+  <body style="background-color:#34495E;">
     <h1>
       Toutes les Apps Android et IOS de AppyOne !
     </h1>
@@ -24,9 +24,9 @@
     </div>
 
      <div class = "AppTalk_I" > <img src = IconAppTalkTransparent.png> AppTalk IOS
-       <form action="AppTalk.apk" download>
-         <input type="submit" value="Télécharger AppTalk pour IOS" />
-       </form>
-     </div>
+<!--       <form action="AppTalk.apk" download> -->
+         <input type="submit" value="Télécharger AppTalk pour IOS (indisponible pour le moment)" />
+<!--     </div> -->
+
   </body>
 </html>
