--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </div>
 
      <div class = "AppTalk_I" > <img src = IconAppTalkTransparent.png> AppTalk IOS
-<!--       <form action="AppTalk.apk" download> -->
+       <form action="Amib.apk" download>
          <input type="submit" value="Télécharger AppTalk pour IOS (indisponible pour le moment)" />
-<!--     </div> -->
+     </div>
 
   </body>
 </html>
